--- a/package.json
+++ b/package.json
@@ -1,62 +1,48 @@
 {
-  "name": "async-race",
+  "name": "y",
   "version": "1.0.0",
-  "description": "",
+  "description": "My webpack project",
   "main": "index.ts",
   "scripts": {
-    "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
-    "build": "webpack --config ./webpack.config.js --env mode=prod",
-    "lint": "eslint . --ext .ts",
-    "format": "prettier --write \"**/*.ts\"",
-    "clear": "del-cli dist"
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "start": "webpack serve",
+    "lint": "eslint ./src/ --ext .ts"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
-    "@types/node": "^18.6.1",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.6",
+    "@babel/preset-env": "^7.22.7",
+    "@types/node": "^17.0.10",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "@webpack-cli/generators": "^2.4.1",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
-    "del-cli": "^3.0.0",
-    "eslint": "^8.44.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-webpack-plugin": "^3.2.0",
-    "html-loader": "^0.5.5",
+    "copy-webpack-plugin": "^10.1.0",
+    "core-js": "^3.31.1",
+    "css-loader": "^6.5.1",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
-    "image-webpack-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "postcss-preset-env": "^8.5.1",
-    "prettier": "^2.7.1",
-    "sass": "^1.54.0",
-    "sass-loader": "^13.0.2",
+    "mini-css-extract-plugin": "^2.4.5",
+    "prettier": "^2.5.1",
+    "prettier-eslint": "^13.0.0",
+    "regenerator-runtime": "^0.13.11",
+    "sass": "^1.44.0",
+    "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
-    "svg-url-loader": "^8.0.0",
-    "svgo": "^3.0.2",
-    "terser-webpack-plugin": "^5.3.3",
-    "ts-loader": "^9.4.3",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3",
-    "webpack-merge": "^5.8.0"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.12.1",
-    "normalize.css": "^8.0.1",
-    "postcss-loader": "^7.3.3"
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   }
 }
