--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
       "prettier/prettier": "warn",
       "no-debugger": "off",
       "no-console": "error",
+      "no-undef": "off",
       "class-methods-use-this": "off",
       "@typescript-eslint/no-explicit-any": "error",
       "@typescript-eslint/lines-between-class-members": "off",
