--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,34 +1,45 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "airbnb-base",
-        "airbnb-typescript/base",
-        "plugin:prettier/recommended",
-        "eslint:recommended",
-        "prettier",
-        "plugin:@typescript-eslint/eslint-recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "project": "./tsconfig.json"
-    },
-    "plugins": [
-      "prettier",
-      "import",
-      "@typescript-eslint"
-    ],
-    "rules": {
-      "prettier/prettier": "warn",
-      "no-debugger": "off",
-      "no-console": "error",
-      "no-undef": "off",
-      "class-methods-use-this": "off",
-      "@typescript-eslint/no-explicit-any": "error",
-      "@typescript-eslint/lines-between-class-members": "off",
-      "import/no-dynamic-require": "off",
-      "max-lines-per-function": ["error", { "max": 40, "skipBlankLines": false, "skipComments": true }]
-    }
+  "env": {
+    "es6": true,
+    "browser": true,
+    "node": true
+  },
+  "extends": [
+    "plugin:prettier/recommended",
+    "prettier",
+    "airbnb-typescript/base",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "project": "./tsconfig.json"
+  },
+  "plugins": [
+    "prettier",
+    "import",
+    "@typescript-eslint"
+  ],
+  "rules": {
+    "eol-last": 2,
+    "@typescript-eslint/indent": "off",
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/comma-dangle": "off",
+    "no-debugger": "off",
+    "no-console": 0,
+    "class-methods-use-this": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "trailingComma": "es5",
+        "endOfLine": "auto",
+        "tabWidth": 2,
+        "semi": true,
+        "singleQuote": true,
+        "printWidth": 120
+      }
+    ]
+  }
 }
