--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "copy-webpack-plugin": "^10.1.0",
     "core-js": "^3.31.1",
     "css-loader": "^6.5.1",
-    "eslint": "^8.4.1",
+    "eslint": "^8.45.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
